--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pyraylib
+name = Pylowdb
 version = 1.0.0
 description = Tiny local JSON database for Python, django, flask.
 long_description = file: README.md
