--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = Pylowdb
 version = 1.0.1
 description = Tiny local JSON database for Python, django, flask.
 long_description = file: README.md
-url = https://github.com/Ho011/pyraylib
+url = https://github.com/Ho011/pylowdb
 author = Hussein Sarea
 author_email = zzzsssx0@gmail.com
 license = MIT License
